grabbing userid from context
